have started wishlist

--- a/views/admin/coupon/index.ejs
+++ b/views/admin/coupon/index.ejs
@@ -76,7 +76,7 @@
                       </td>
                   </tr>
                   <% i++ }) }else{ %>
-                      <tr><p></p><%= "No Categories To Show" %></p></tr>
+                      <tr><p></p><%= "No Coupons To Show" %></p></tr>
                   <% } %>
                 </tbody>
               </table>
