--- a/views/public/index.ejs
+++ b/views/public/index.ejs
@@ -78,7 +78,7 @@
 												<small class="text-secondary"><%= item.type === 1 ? "Veg" : "Non-Veg" %> &nbsp;<i class="bi fs-6 bi-circle-fill text-<%= item.type === 1 ? "success" : "danger" %>"></i></small>
 												<div class="float-end fs-6">
 													<i title="added to cart" class="bi text-danger bi-bag p-1 fs-5" id="addToCart" onclick="addToCart(`<%= JSON.stringify(item) %>`, `<%= isAuthenticated %>`) "></i>
-													<i title="add to wishlist" class="bi text-danger bi-heart p-1 fs-5"></i>
+													<i title="add to wishlist" class="bi text-danger bi-heart p-1 fs-5" id="addToWishList" onclick="addToCart(`<%= JSON.stringify(item) %>`, `<%= isAuthenticated %>`) "></i>
 												</div>
 												<h2 style="height: 50px; padding-top: 10px;" class=""><a href="/foodDetail/<%= item.slug %>"><%= item.foodName %></a></h2>
 												<a href="/foodDetail/<%= item.slug %>"><button type="button" class="btn btn-danger float-end">Show Details</button></a>
